--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -90,8 +90,8 @@
     <a href="${thing.url}" target="_top">
       <img src="${static('kill.png')}"
            height="11" width="11"
-           alt="${_('turn off the toolbar')}"
-           title="${_('turn off the toolbar')}" />
+           alt="${_('visit this link without the toolbar')}"
+           title="${_('visit this link without the toolbar')}" />
     </a>
   </div>
 
