--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -132,7 +132,7 @@
   ## add us to the click cookie
   <script type="text/javascript">
     $(function() {
-      add_thing_id_to_cookie('${thing.link._fullname}', 'click');
+      add_thing_id_to_cookie('${thing.link._fullname}', 'recentclicks');
     });
   </script>
   <span>
