add liked/disliked style to midcol to fix score updates

--- a/r2/r2/templates/comment_skeleton.html
+++ b/r2/r2/templates/comment_skeleton.html
@@ -23,9 +23,9 @@
 <%inherit file="printable.html"/>
 <%namespace file="utils.html" import="plain_link" />
 
-<%def name="midcol(display=True)">
+<%def name="midcol(display=True, cls = '')">
 %if c.profilepage or (not thing._deleted and  (not thing._spam or c.user == thing.author or c.user_is_admin)):
-${parent.midcol(display=display)}
+${parent.midcol(display=display, cls = cls)}
 %endif
 </%def>
 
