--- a/r2/r2/templates/linkcompressed.html
+++ b/r2/r2/templates/linkcompressed.html
@@ -35,8 +35,8 @@
   </span> 
 </%def>
 
-<%def name="midcol(display=True)">
-  <div class="midcol" style="width:&midcolmargin;" 
+<%def name="midcol(display=True, cls = '')">
+  <div class="midcol ${cls}" style="width:&midcolmargin;" 
        ${not display and "style='display:none'" or ''}>
     ${self.arrow(thing, 1, thing.likes)}
     ${self.arrow(thing, 0, thing.likes == False)}
