--- a/r2/r2/templates/subreddit.html
+++ b/r2/r2/templates/subreddit.html
@@ -98,7 +98,7 @@
 
 </%def>
 
-<%def name="midcol(display=True)">
+<%def name="midcol(display=True, cls='')">
   <div class="midcol">
     ${addremove_button(thing)}
     ${permission_icons(thing)}
