--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -30,8 +30,8 @@
 ### specific fill-in functions for comment
 ##################
 
-<%def name="midcol(display=True)">
-${parent.midcol(not thing.collapsed)}
+<%def name="midcol(display=True, cls = '')">
+${parent.midcol(not thing.collapsed, cls = cls)}
 </%def>
 
 <%def name="ParentDiv()">
