--- a/r2/r2/templates/message.html
+++ b/r2/r2/templates/message.html
@@ -26,7 +26,7 @@
 <%inherit file="comment_skeleton.html"/>
 
 ## disable voting arrows
-<%def name="midcol()">
+<%def name="midcol(cls='')">
 </%def>
 
 
