--- a/r2/r2/templates/morechildren.html
+++ b/r2/r2/templates/morechildren.html
@@ -50,6 +50,6 @@ load more comments <span class="gray">&nbsp;(${thing.count} ${ungettext("reply",
 <%def name="tagline(collapse=False)">
 </%def>
 
-<%def name="midcol()">
+<%def name="midcol(cls = '')">
 </%def>
 
