--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -118,6 +118,7 @@
     <th>${_("link options")}</th>
     <td class="prefright">
       <p>${checkbox(_("show me new links on the front page"), "organic")}</p>
+      <p>${checkbox(_("show me links I've recently viewed"), "clickgadget")}</p>
       <p>${checkbox(_("compress the link display"), "compress")}</p>
       <p>${checkbox(_("don't show links after i've liked them"), "hide_ups")}</p>
       <p>${checkbox(_("don't show links after i've disliked them"), "hide_downs")}</p>
