if the user is logged in, dont hit the server for recently clicked

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -135,7 +135,7 @@
   %endif
 
   ##cheating... we should move ads into a template of its own
-  ${ClickGadget().render()}
+  ${ClickGadget(c.recent_clicks).render()}
 </%def>
 
 
