--- a/r2/r2/templates/clickgadget.html
+++ b/r2/r2/templates/clickgadget.html
@@ -22,11 +22,11 @@
 <%namespace file="printable.html" import="simple_button" />
 
 %if c.user.pref_clickgadget:
-<div class="gadget" style="display: none;">
+<div class="gadget" style="${'display: none' if not thing.content else ''}">
   <h2>${_("Recently viewed links")}</h2>
 
   <div class="click-gadget">
-    <!-- populated by the populate_click_gadget function in reddit.js -->
+    ${thing.content}
   </div>
 
   <div class="right">
