--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -356,7 +356,8 @@ ${unsafe(txt)}
       /* the user's voting hash */
       modhash: ${"'%s'" % c.modhash or "false"},
       /* current domain */
-      cur_domain: "${get_domain(cname = c.frameless_cname, subreddit = False)}",
+      cur_domain: "${get_domain(cname = c.frameless_cname, subreddit = False,
+                                no_www = True)}",
       /* where do ajax request go? */
       ajax_domain: "${get_domain(cname=c.authorized_cname, subreddit = False)}",
       vl: {},
