rename the recentclick cookie for the millionth time

--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -149,7 +149,7 @@
   ## add us to the click cookie
   <script type="text/javascript">
     $(function() {
-      add_thing_id_to_cookie('${thing.link._fullname}', 'recentclicks');
+      add_thing_id_to_cookie("${thing.link._fullname}", "recentclicks2");
     });
   </script>
   <span>
