--- a/r2/r2/templates/linkinfobar.html
+++ b/r2/r2/templates/linkinfobar.html
@@ -30,11 +30,11 @@
     <tr><th>${_("submitted on")}</th>
       <td>${thing.a._date.strftime(thing.datefmt)}</td></tr>
     <tr><th>${ungettext('point', 'points', 5)}</th>
-      <td>${thing.a.score}</td></tr>
+      <td class="score">${thing.a.score}</td></tr>
     <tr><th>${_("up votes")}</th>
-      <td>${thing.a.upvotes}</td></tr>
+      <td class="upvotes">${thing.a.upvotes}</td></tr>
     <tr><th>${_("down votes")}</th>
-      <td>${thing.a.downvotes}</td></tr>
+      <td class="downvotes">${thing.a.downvotes}</td></tr>
     %if c.user_is_admin:
       <%include file="adminlinkinfo.html"/>
     %endif
