--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -34,7 +34,7 @@
   <title>${thing.title}</title>
   <link>${url}</link>
   <guid isPermaLink="true">${url}</guid>
-  <pubDate>${thing._date.isoformat()}</pubDate>
+  <pubDate>${thing._date.strftime('%a, %d %b %Y %H:%M:%S %z')}</pubDate>
   <dc:date>${thing._date.isoformat()}</dc:date>
   <description>
     %if use_thumbs:
